fix: Returning field error details (#234)